kube-manifests/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-teste
  namespace: teste
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: app-teste
  
  template:
    metadata:
      labels:
        app: app-teste
    spec:
      containers:
      - name: app-teste
        image: rafabarozzi/teste:latest
        ports:
        - containerPort: 3000
