kube-manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: svc-app-teste
  namespace: teste
spec:
  type: NodePort
  selector: 
    app: app-teste

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
