kube-manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-teste-ingress
  namespace: teste
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: teste.rbarozzi.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-app-teste
            port:
              number: 80
  tls:
  - hosts:
    - teste.rbarozzi.com
    secretName: teste-tls
